Use Hazelcast for cache management.